web/libraries/fractal/components/tests/filter/fail/format-currency.twig
{# €1,000,000.00 #}
{{ '1000000'|format_currency('EUR') }}

{# €12.34 #}
{{ '12.345'|format_currency('EUR', {rounding_mode: 'floor'}) }}

{# €1,000,000.0000 #}
{{ '1000000'|format_currency('EUR', {fraction_digit: 4}) }}
